--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -599,6 +599,13 @@ a:after {
 	right: 30px;
 }
 
+.mrpiconSpan
+{
+     
+    width: 32px;
+    height:47px;
+}
+
 /* ==========================================================================
    Blog Section
    ========================================================================== */
